Fixed spacing of picture in adminCreation. Got rid of border in tables in adminMain.

--- a/src/style/style4.css
+++ b/src/style/style4.css
@@ -14,7 +14,6 @@
     margin-top: 2%;
   }
   
-  
   .image-one {
     background: 
     linear-gradient(
@@ -56,6 +55,22 @@
         rgba(119, 119, 119, 0.6)    
       ), 
       url(../images/coffee15.jpeg); /* name of your image here */
+    background-size: cover; 
+    height: 100%; 
+    width: 100%;
+    margin: 0;
+    position: relative;
+    float: left;
+    margin-top: -1%;
+  }
+
+  .image-four {
+    background: 
+    linear-gradient(
+        rgba(119, 119, 119, 0.6),    
+        rgba(119, 119, 119, 0.6)    
+      ), 
+      url(../images/coffee2.jpeg); /* name of your image here */
     background-size: cover; 
     height: 100%; 
     width: 100%;
